inital commit and started setup - preFirebase

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -2,8 +2,11 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Bloc Base Project</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <title>Bloc Chat Project</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--dont forget to add link to chosen google fonts with https-->
+    <link rel="stylesheet" href="/styles/normalize.css">
+	<link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
     <script src="/scripts/app.js"></script>
